--- a/src/add-vehicle-1.html
+++ b/src/add-vehicle-1.html
@@ -414,9 +414,9 @@
                                     </div>
                                 </div>
 
-                                <div class="row justify-content-between">
+                                <div class="row justify-content-between mx-2 mx-md-0">
                                     <div class="col-sm-6">
-                                        <a class="btn-add mt-3 ms-md-3" href="#">
+                                        <a class="btn-add mt-3 ms-md-0" href="#">
                                             <img src="images/add-pluse-circle.svg" alt="Add" class="icon" />
                                             Add Vehicle
                                         </a>
@@ -427,7 +427,7 @@
                                             <input class="checkbox-control" type="checkbox" value=""
                                                 id="flexCheckDefault" checked>
                                             <span class="checkbox-custom"></span>
-                                            <span class="checkbox-label">Keep same liability limits
+                                            <span class="checkbox-label me-3">Keep same liability limits
                                             </span>
                                         </label>
 
@@ -515,7 +515,7 @@
                                             </div>
                                         </div>
                                         <div class="row g-3">
-                                            <div class="col-sm-6">
+                                            <div class="col-6">
                                                 <div class="f-group max-width-100">
 
                                                     <select class="f-control f-dropdown"
@@ -531,7 +531,7 @@
                                                 </div>
 
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-6">
                                                 <div class="f-group max-width-100">
 
                                                     <select class="f-control f-dropdown" placeholder="Medical Payments"
@@ -546,7 +546,7 @@
                                                 </div>
 
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-6">
                                                 <div class="f-group max-width-100">
 
                                                     <select class="f-control f-dropdown" placeholder="Property Damage"
@@ -561,7 +561,7 @@
                                                 </div>
 
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-6">
                                                 <div class="f-group max-width-100">
 
                                                     <select class="f-control f-dropdown" placeholder="Un /Under Insured"
