--- a/src/add-vehicle-3.html
+++ b/src/add-vehicle-3.html
@@ -414,9 +414,9 @@
                                     </div>
                                 </div>
 
-                                <div class="row justify-content-between">
+                                <div class="row justify-content-between mx-2 mx-md-0">
                                     <div class="col-sm-6">
-                                        <a class="btn-add mt-3 ms-md-3" href="#">
+                                        <a class="btn-add mt-3 ms-md-0" href="#">
                                             <img src="images/add-pluse-circle.svg" alt="Add" class="icon" />
                                             Add Vehicle
                                         </a>
@@ -453,7 +453,7 @@
                                     <div class="col-md-12 col-12">
                                         <input class="form-control addMain" type="text" placeholder="Street Address" />
                                     </div>
-                                    <div class="col-md-4 col-12">
+                                    <div class="col-md-4  col-6">
                                         <div class="f-group max-width-100">
 
                                             <select class="f-control f-dropdown" placeholder="City" id="multiple"
@@ -467,7 +467,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-lg-4 col-12">
+                                    <div class="col-md-4 col-lg-4 col-6">
                                         <div class="f-group max-width-100">
 
                                             <select class="f-control f-dropdown" placeholder="State" id="multiple"
