--- a/src/remarket-1-edit.html
+++ b/src/remarket-1-edit.html
@@ -287,7 +287,7 @@
                                             <div class="row align-items-center mb-3">
                                         <div class="col-md-9 "><label class="text-black fw-400 fs-12 mb-0">Mailing Address</label> <input class="form-control " type="text"
                                             placeholder="Address" value="105 Jerry Dove Drive, Florence, SC 29501" /></div>
-                                        <div class="col-md-3 ">  <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
+                                        <div class="col-md-3 mt-3 mt-md-0">  <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
                                             <input class="checkbox-control" type="checkbox" value="" id="Corina">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label">Same as Current Address</span>
@@ -300,7 +300,7 @@
 
                                         <div class="col-md-9 align-items-center"><label class="text-black fw-400 fs-12 mb-0">Vehicle parking address</label> <input class="form-control " type="text"
                                             placeholder="Vehicle parking address" value="105 Jerry Dove Drive, Florence, SC 29501" /></div>
-                                        <div class="col-md-3  align-items-center"><label class="checkbox-inline w-auto me-3 mb-0" for="Current">
+                                        <div class="col-md-3  mt-3 mt-md-0 align-items-center"><label class="checkbox-inline w-auto me-3 mb-0" for="Current">
                                             <input class="checkbox-control" type="checkbox" value="" id="Current">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label">Same as Current Address</span>
@@ -336,12 +336,12 @@
                                             aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                             <div class="accordion-body pt-0">
                                                 <div class="row g-3">
-                                                    <div class="col-sm-4 col-md-4">
+                                                    <div class="col-sm-4 col-md-4 col-6">
                                                         <input class="form-control " type="text"
                                                             placeholder="First Name" value="" />
 
                                                     </div>
-                                                    <div class="col-sm-4  col-md-4">
+                                                    <div class="col-sm-4  col-md-4 col-6">
                                                         <input class="form-control " type="text"
                                                             placeholder="Last Name" value="" />
                                                     </div>
@@ -363,7 +363,7 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="col-sm-4 ">
+                                                    <div class="col-sm-4 col-6">
                                                         <input class="form-control date-control" type="text"
                                                             onfocus="(this.type='date')" id="date"
                                                             placeholder="Birth Date" value="" />
@@ -518,7 +518,7 @@
                                                             <span class="radio-box-custom">NO</span>
                                                         </label>
                                                     </div>
-                                                    <div style="margin: inherit;" class="upload-box  p-0 bg-white ms-3">
+                                                    <div style="margin: inherit;" class="upload-box  p-0 bg-white ms-0 ms-md-3 mt-3 ms-md-0">
                                                         <div class="radio-check-switch ">
     
                                                             <div class="form-item">
