--- a/src/add-vehicle-13-new.html
+++ b/src/add-vehicle-13-new.html
@@ -189,7 +189,11 @@
                                 <div style="width:65% !important" class="row mx-auto">
 
                                     <div class="col-md-4"> <div class="white-box contain-wrapper-sm mb-4 mt-4">
-                                        <div class="bottomoption menuitemshow">
+                                        <div class="bottomoption menuitemshow py-2">
+                                            <div class="upload-box mb-3 w-auto text-center">
+                                            <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
+                                            <p class="fs-14 mt-2  text-center">Vehicles</p>
+                                            </div>
                                             <div class="mb-3 mt-2">
                                                 <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
                                                     <input class="checkbox-control" type="checkbox" value="" id="Corina">
@@ -215,6 +219,10 @@
                                     </div>
                                     </div>
                                     <div class="col-md-4"> <div class="white-box contain-wrapper-sm mb-4 mt-4">
+                                        <div class="upload-box mb-3 w-auto text-center">
+                                            <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
+                                            <p class="fs-14 mt-2  text-center py-2">Drivers</p>
+                                            </div>
                                         <div class="bottomoption menuitemshow">
                                             <div class="mb-3 mt-2">
                                                 <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
@@ -240,7 +248,12 @@
                                         </div>
                                     </div>
                                     </div><div class="col-md-4"> <div class="white-box contain-wrapper-sm mb-4 mt-4">
+
                                         <div class="bottomoption menuitemshow">
+                                            <div class="upload-box mb-3 w-auto text-center">
+                                                <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
+                                                <p class="fs-14 mt-2  text-center py-3">Others</p>
+                                                </div>
                                             <div class="mb-3 mt-2">
                                                 <label class="checkbox-inline w-auto me-3 mb-0" for="Corina">
                                                     <input class="checkbox-control" type="checkbox" value="" id="Corina">
