--- a/src/remove-vehicle-1.html
+++ b/src/remove-vehicle-1.html
@@ -132,81 +132,58 @@
                             <img src="./images/user-person.svg" alt="" class="user-person mx-auto">
                             <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                         </div>
-                        <h3 class="title  text-center">It looks like the plate for (veh Removing) is still active,
-                           <br/> No worries we can help you.
+                        <h3 class="title  text-center">Which Vehicles would you like to remove? 
                         </h3>
 
 
                         <div class="contain-wrapper-sm">
 
-                            <!-- <form class="mt-4">
-                                <div class="blue-light-box bg-white pb-3">
-
-
-                                    <div class="d-flex justify-content-between mb-3 pb-1">
-                                        <h4 class="title fs-16 "> Select any from below and continue</h4>
+                            <form class="mt-4">
+                                <div class="blue-light-box p-0">
+                                    <div class="d-md-flex justify-content-between align-items-center car-block">
+                                        <div class="flex-shrink-1">
+                                            <label class="checkbox-inline mb-0 w-auto" for="Ford">
+                                                <input class="checkbox-control" type="checkbox" value="" id="Ford"
+                                                    checked>
+                                                <span class="checkbox-custom"></span>
+                                                <span class="checkbox-label fs-16 fw-500">Ford Fiesta</span>
+                                            </label>
+                                        </div>
+                                    
                                     </div>
-
-                                    <div class="bg-white car-block px-0">
-
-                                        <label class="radio-inline" for="Register">
-                                            <input class="radio-control" type="radio" name="country" value=""
-                                                id="Register" checked="">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">Use this plate on (veh adding)
-                                            </span>
+                                    <div class="car-block bg-white">
+                                        <label class="checkbox-inline mb-0 w-auto" for="Honda">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Honda">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">Honda Civic</span>
                                         </label>
-
-
-
                                     </div>
-
-                                    <div class=" bg-white car-block px-0">
-                                        <label class="radio-inline" for="us">
-                                            <input class="radio-control" type="radio" name="country" value="" id="us"
-                                                checked="">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">Cancel this Plate</span>
+                                    <div class="car-block bg-white">
+                                        <label class="checkbox-inline mb-0 w-auto" for="Ecosport">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Ecosport">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">Ford Ecosport</span>
                                         </label>
-
                                     </div>
-
-                                    <div class="car-block px-0 bg-white ">
-                                        <label class="radio-inline" for="us">
-                                            <input class="radio-control" type="radio" name="country" value="" id="us"
-                                                checked="">
-                                            <span class="radio-custom"></span>
-                                            <span class="radio-label">Keep my plate, will be getting another vehicle
-                                                later</span>
+                                     <div class="car-block bg-white">
+                                        <label class="checkbox-inline mb-0 w-auto" for="Ecosport">
+                                            <input class="checkbox-control" type="checkbox" value="" id="Ecosport">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">Alcazar</span>
                                         </label>
-
                                     </div>
-
                                 </div>
 
-
-                                <button type="submit" class="btn btn-primary mx-auto mt-4" data-bs-toggle="modal"
+                                <!-- <button type="submit" class="btn btn-primary mx-auto mt-4" data-bs-toggle="modal"
                                     data-bs-target="#exampleModalToggle2"><span>
-                                        Continue</span></button> 
-                            </form> -->
-
-                            <p class="text-black fs-16 mb-2 fw-500 mt-4">Select any from below and continue</p>
-                                <div class="f-group max-width-100"> <div
-                                        class="f-dropdown selectDropdown filled"><select
-                                            class="f-control f-dropdown"
-                                            placeholder="Add a Vehicle now & Use this Plate"
-                                            id="multiple" multiple> <option
-                                                value>Add a Vehicle now & Use this Plate</option>
-                                            <option value="1">Relation to
-                                                Applicant </option> <option
-                                                value="2">Married </option>
-                                        </select> </div> </div>
+                                        Continue</span></button> -->
+                            </form>
                         </div>
                         <div style="gap:10px;"
                             class="d-flex flex-column flex-sm-row align-items-center justify-content-center mt-4">
                             <button type="submit" class="btn btn-primary mx-auto mt-4" data-bs-toggle="modal"
                                 data-bs-target="#exampleModalToggle2"><span>
-                                    Continue</span></button>
+                                    Remove & Continue</span></button>
                           
 
 
@@ -222,9 +199,9 @@
                     <div class="modal-content">
                         <div class="modal-header border-0 d-block">
 
-                            <h4 class="title fs-20 mb-0 mx-auto text-center mt-3 fw-bold ">Are you sure you want to Cancel this Plate ?
+                            <h4 class="title fs-20 mb-0 mx-auto text-center mt-3 fw-bold ">Are you sure you want to remove following vehicles ?
                             </h4>
-                            <p class="sub-title mt-2  text-center"> 05 Honda Civic (GJZ 0123)</p>
+                            <p class="sub-title mt-2  text-center"> 05 Honda Civic, Ford Ecosport.</p>
                         </div>
                         <div class="modal-body">
                             <div style="gap:10px;"
