Design of client profile notes page for responsive is updated

--- a/src/client-profile-Notes-2-responsive.html
+++ b/src/client-profile-Notes-2-responsive.html
@@ -132,8 +132,7 @@
                 <div class="content">
                     <div class="container mt-5 pt-5">
 
-                        <a class="text-blue ms-0 my-2" href="client-profile-Notes-2.html"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
-
+                        
                         <div class="user-card">
                             <div class="user-details">
                                 <div class="user-img">
@@ -209,7 +208,18 @@
 
                         </div> <!-- /user-card -->
 
-                        <div class="serach-box">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <a href="" class="fs-26 text-black fw-bold">
+                                <img src="images/left-arrow-black.svg" class="me-2" />
+                                Notes
+                            </a>
+
+                            <a href="" class="text-blue fs-16 text-uppercase">
+                                <img src="images/add-pluse-circle.svg" class="me-2" alt="">
+                                Add comment</a>
+                        </div>
+
+                        <div class="serach-box d-none">
                             <div class="input-group search">
                                 <img class="" src="images/search.svg">
                                 <input class="form-control" type="search" placeholder="Search Notes" />
@@ -431,10 +441,7 @@
                                                 Policy Name
                                             </div>
                                         </div>
-                                        <div class="notes-option w-100 w-sm-auto mt-2 mt-sm-0 text-center">
-                                            <a href="">
-                                                <img src="images/conversation.svg" alt="">
-                                            </a>
+                                        <div class="notes-option w-100 w-sm-auto mt-2 mt-sm-0 text-center ">
                                             <a href="">
                                                 <img src="images/forward.svg">
                                             </a>
@@ -462,7 +469,7 @@
                                         <textarea placeholder="Write your comment..."
                                             class="form-control h-auto mb-2 py-2" id="" rows="5"></textarea>
                                         <button type="submit"
-                                            class="btn btn-primary text-white text-uppercase ml-auto"><span>comment</span></button>
+                                            class="btn btn-primary text-white text-uppercase ml-auto"><span>Save</span></button>
                                     </div>
                                     <ul class="comment-list">
                                         <li class="comment">
