--- a/src/client-profile-Notes-edit-responsive.html
+++ b/src/client-profile-Notes-edit-responsive.html
@@ -217,8 +217,7 @@
                                 Add Note</a>
                         </div>
 
-
-                        <div class="serach-box d-none">
+                        <div class="serach-box">
                             <div class="input-group search">
                                 <img class="" src="images/search.svg">
                                 <input class="form-control" type="search" placeholder="Search Notes" />
@@ -226,71 +225,7 @@
                         </div> <!-- /search-box -->
 
                         <div class="note-container">
-                            <div class="notes-side-bar">
-                                <a href="client-profile-Notes-2-responsive.html" class="notes-card blue-bg">
-                                    <div class="notes-description">
-                                        <div class="update-log">04 Honda Added</div>
-                                        <div class="update-log">Skoda Octavia Vehicle Added</div>
-                                    </div>
-                                    <div class="notes-card-footer">
-                                        <div class="notes-user">
-                                            Bradley Lawlor
-                                        </div>
-                                        <div class="notes-policy-name">
-                                            Policy Name
-                                        </div>
-                                    </div>
-                                </a><!-- notes-card -->
-                                <a href="client-profile-Notes-2-responsive.html" class="notes-card">
-                                    <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
-                                    </div>
-                                    <div class="notes-card-footer">
-                                        <div class="notes-user">
-                                            Bradley Lawlor
-                                        </div>
-                                        <div class="notes-policy-name">
-                                            Policy Name
-                                        </div>
-                                    </div>
-                                </a><!-- notes-card -->
-                                <a href="client-profile-Notes-2-responsive.html" class="notes-card">
-                                    <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
-                                    </div>
-                                    <div class="notes-card-footer">
-                                        <div class="notes-user">
-                                            Bradley Lawlor
-                                        </div>
-                                        <div class="notes-policy-name">
-                                            Policy Name
-                                        </div>
-                                    </div>
-                                </a><!-- notes-card -->
-                                <a href="client-profile-Notes-2-responsive.html" class="notes-card">
-                                    <div class="notes-description">
-                                        <p class="m-0">
-                                            Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                            consectetur accumsan, nibh ex consectetur accumsan, nibh ex...
-                                        </p>
-                                    </div>
-                                    <div class="notes-card-footer">
-                                        <div class="notes-user">
-                                            Bradley Lawlor
-                                        </div>
-                                        <div class="notes-policy-name">
-                                            Policy Name
-                                        </div>
-                                    </div>
-                                </a><!-- notes-card -->
-                            </div>
-                            <div class="notes-data d-none d-md-block">
+                            <div class="notes-data w-100">
 
                                 <div class="serach-box">
                                     <div class="input-group search">
@@ -447,55 +382,46 @@
                                         </div>
                                     </div><!-- /accordion-item -->
                                 </div><!-- /accordionPolicy -->
-                                <div class="policy-details">
+                                <div class="policy-details edit-mode">
 
                                     <div class="documents-attached row">
                                         <div class="col-md-6">
                                             <div class="doc-card">
                                                 <img src="images/document-pair.svg" />
                                                 <span class="doc-title">John_Victor_License.pdf</span>
+
+                                                <div class="edit-options ms-auto">
+                                                    <a href=""> <img src="images/checkmark-green.svg" alt=""></a>
+                                                    <a href=""> <img src="images/close.svg" alt=""></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="doc-card">
                                                 <img src="images/document-pair.svg" />
                                                 <span class="doc-title">Octavia_VIN_Document.pdf</span>
+
+                                                <div class="edit-options ms-auto">
+                                                    <a href=""> <img src="images/edit-2.svg" alt=""></a>
+                                                    <a href=""> <img src="images/delete.svg" alt=""></a>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6">
+                                            <div class="doc-card add-document">
+                                                <img src="images/document-pair.svg" />
+                                                <span class="doc-title">Click to upload copy of home insurance</span>
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="pinned-comment">
-                                        <div class="comment">
-                                            <div class="comment-head">
-                                                <div class="user-img">
-                                                    <img src="images/user-img.png">
-                                                </div>
-                                                <div class="user-name">Bradley Lawlor</div>
-                                                <div class="comment-time">
-                                                    <span>
-                                                        Jun 5, 2023 1:28 am
-                                                    </span>
-                                                    <img src="images/pin.svg" class="ml-2" alt="">
-                                                </div>
-
-                                                <div class="comment-otions">
-                                                    <img src="images/more.svg">
-                                                </div>
-                                            </div>
-                                            <div class="comment-details">
-                                                Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                                consectetur accumsan, nibh ex consectetur accumsan, nibh ex Lorem ipsum
-                                                dolor sit amet,
-                                            </div>
-                                        </div><!-- comment -->
-                                    </div>
-                                    
-                                    <div class="policy-updates flex-wrap flex-sm-nowrap">
-                                        <div class="created-updated w-100 w-sm-auto mt-0">Created on May 28, 2023 9:59 pm</div>
-                                        <div class="last-updated w-100 w-sm-auto mt-0">Last modified on May 28, 2023 9:59 pm</div>
+                                    <div class="policy-updates flex-wrap">
+                                        <div class="created-updated mt-0 w-100 w-sm-auto">Created on May 28, 2023 9:59 pm</div>
+                                        <div class="last-updated mt-2 mt-sm-0 w-100 w-sm-auto">Last modified on May 28, 2023 9:59 pm</div>
                                     </div>
 
-                                    <div class="notes-options flex-wrap flex-sm-nowrap">
+                                    <div class="notes-options flex-wrap">
                                         <div class="notes-card-footer w-100 w-sm-auto">
                                             <div class="notes-user">
                                                 Bradley Lawlor
@@ -504,14 +430,12 @@
                                                 Policy Name
                                             </div>
                                         </div>
-                                        <div class="notes-option w-100 w-sm-auto mt-2 mt-sm-0 text-center">
-                                            <a href="">
-                                                <img src="images/conversation.svg" alt="">
-                                            </a>
+
+                                        <div class="notes-option mt-2 mt-sm-0 w-100 w-sm-auto text-center">
                                             <a href="">
                                                 <img src="images/forward.svg">
                                             </a>
-                                            <a href="client-profile-Notes-edit.html">
+                                            <a href="">
                                                 <img src="images/edit-2.svg">
                                             </a>
                                             <a href="">
@@ -524,18 +448,14 @@
 
                                 <div class="comment-section">
                                     <div class="comment-sec-title d-flex justify-content-between align-items-center">
-
                                         <span>Comment</span>
                                         <a class="ms-2" href="client-profile-Notes-search-cmt.html">
                                             <img class="" src="images/search.svg">
                                         </a>
-                                        <a href="" class="ms-auto fs-12">Deleted Comments</a>
-                                    </div>
-                                    <div class="add-comment">
-                                        <textarea placeholder="Write your comment..."
-                                            class="form-control h-auto mb-2 py-2" id="" rows="5"></textarea>
-                                        <button type="submit"
-                                            class="btn btn-primary text-white text-uppercase ml-auto"><span>comment</span></button>
+                                        <a class="ms-2" href="client-profile-Notes-search-cmt.html">
+                                            <img class="" src="images/add-pluse-circle.svg">
+                                        </a>
+                                         <a href="" class="ms-auto fs-12">Deleted Comments</a>
                                     </div>
                                     <ul class="comment-list">
                                         <li class="comment">
@@ -568,10 +488,18 @@
                                                     <img src="images/more.svg">
                                                 </div>
                                             </div>
-                                            <div class="comment-details">
-                                                Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin
-                                                consectetur accumsan, nibh ex consectetur accumsan, nibh ex Lorem ipsum
-                                                dolor sit amet,
+                                            <div class="comment-details edit-comment">
+                                                <div class="add-comment">
+                                                    <textarea placeholder="Write your comment..."
+                                                        class="form-control h-auto mb-2" id="" rows="5">Ut sodales, ex sit amet consectetur accumsan, nibh ex sollicitudin consectetur accumsan, nibh ex consectetur accumsan, nibh ex Lorem ipsum dolor sit amet,</textarea>
+                                                    
+                                                    <div>  
+                                                          <!-- <button type=""
+                                                        class="btn btn-outline text-blue text-uppercase ml-auto"><span>cancel</span></button> -->
+                                                    <button type="submit"
+                                                        class="btn btn-primary text-white text-uppercase ml-auto"><span>save</span></button>
+                                                </div>
+                                                </div>
                                             </div>
                                         </li><!-- comment -->
                                         <li class="comment">
@@ -601,6 +529,69 @@
 
 
                     </div>
+                </div>
+            </div>
+
+
+            <div class="modal fade " id="addPayment" aria-hidden="true" aria-labelledby="addPayment" tabindex="-1">
+                <div class="modal-dialog modal-dialog-top add-payment-modal">
+                    <div class="modal-content">
+                        <div class="modal-header border-0 d-block">
+
+                            <h4 class="title fs-22 mb-0 mx-auto text-left">Add Payment Method
+                            </h4>
+
+                        </div>
+                        <div class="modal-body">
+                            <div class="d-flex">
+                                <label class="radio-inline mb-3 me-5 w-auto" for="card">
+                                    <input class="radio-control" type="radio" name="paymentType" value="" id="card"
+                                        checked="">
+                                    <span class="radio-custom"></span>
+                                    <span class="radio-label">Add Credit/Debit Card</span>
+                                </label>
+                                <label class="radio-inline mb-3 w-auto" for="bank">
+                                    <input class="radio-control" type="radio" name="paymentType" value="" id="bank">
+                                    <span class="radio-custom"></span>
+                                    <span class="radio-label">Add Bank Account</span>
+                                </label>
+                            </div>
+                            <div class="payment-method-form mt-1">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <label class=" mb-3">
+                                            <input type="text" class="form-control" placeholder="Card Holder Name">
+                                        </label>
+                                    </div>
+                                    <div class="col-6">
+                                        <label>
+                                            <input type="number" class="form-control" placeholder="Card Number">
+                                        </label>
+                                    </div>
+                                    <div class="col-3 ps-0">
+                                        <label>
+                                            <input type="text" class="form-control" placeholder="MM/YYYY">
+                                        </label>
+                                    </div>
+                                    <div class="col-3 ps-0">
+                                        <label>
+                                            <input type="text" class="form-control" placeholder="CVV">
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+
+                        <div class="modal-footer border-0 justify-content-center pt-0">
+                            <button type="submit" class="btn btn-primary mb-3 text-center mx-2 w-auto"><span>Add
+                                    card</span></button>
+                            <button type="submit" class="btn btn-outline mb-3 text-center mx-2 w-auto"
+                                data-bs-dismiss="modal"><span>cancel</span></button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
 
