--- a/src/home-insurance/4-rental-info.html
+++ b/src/home-insurance/4-rental-info.html
@@ -208,12 +208,14 @@
                                         <div class="row g-3">
                                             <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-16 font-bold" >How many units are rented out?</label>
+                                                    <label for="" class="fs-18 font-bold" >How many units are rented out?</label>
                                                     <input type="text" placeholder="No. of units" class="form-control">
                                                 </div>
+                                            </div>
+                                            <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-16 font-bold" >How much rent will you get each unit per month?</label>
-                                                    <div class="input-group date form-control px-0">
+                                                    <label for="" class="fs-18 font-bold" >How much rent will you get each unit per month?</label>
+                                                    <div class="input-group form-control px-0">
                                                         <span class="input-group-append ">
                                                             <span class="input-group-text border-0 bg-white d-block pe-0">
                                                                 $
@@ -243,6 +245,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
         </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js">
+        </script>
 
     <script src="../js/app.js"></script>
     <script>
@@ -260,7 +264,16 @@
                     '.customize-options').hide())
             })
         })
+
+        $(function () {
+            $('#datepicker').datepicker({
+                autoclose: true,
+
+            });
+        });
     </script>
+
+    
 
 </body>
 
