client profile and home insurance

--- a/src/client-profile/client-profile-1.html
+++ b/src/client-profile/client-profile-1.html
@@ -210,7 +210,7 @@
                         <div class="serach-box">
                             <h3 class="d-block d-md-none">Which policy can we help you with</h3>
                             <h3 class="d-none d-md-block">Which policy may I help you with</h3>
-                            <div class="input-group search d-none d-md-block">
+                            <div class="input-group search d-none d-md-flex">
                                 <img class="" src="../images/search.svg">
                                 <input class="form-control" type="search" placeholder="Search Policy Name, Car, Address" />
                             </div>
