--- a/src/home-insurance/8.1-personal-info-with-addition.html
+++ b/src/home-insurance/8.1-personal-info-with-addition.html
@@ -220,7 +220,7 @@
 
                                             <div class="col-6">
                                                 <div class="input-group date form-control px-0" id="datepicker">
-                                                    <input type="text" class="" id="date" placeholder="Date of birth (DD/MM/YYYY)" />
+                                                    <input type="text" class="" id="date" placeholder="Date of birth (MM/DD/YYYY)" />
                                                     <span class="input-group-append ">
                                                         <span class="input-group-text border-0 bg-white d-block">
                                                             <img class="" width="20px" src="../images/calender-icon.svg">
@@ -275,7 +275,7 @@
                         
                                                                     <div class="col-6">
                                                                         <div class="input-group date form-control px-0" id="datepicker1">
-                                                                            <input type="text" class="" id="date" placeholder="Date of birth (DD/MM/YYYY)" value="12/09/1993" />
+                                                                            <input type="text" class="" id="date" placeholder="Date of birth (MM/DD/YYYY)" value="12/09/1993" />
                                                                             <span class="input-group-append ">
                                                                                 <span class="input-group-text border-0 bg-white d-block">
                                                                                     <img class="" width="20px" src="../images/calender-icon.svg">
